--- a/index.css
+++ b/index.css
@@ -1,54 +1,54 @@
 body {
-    background-image: url("5727.jpg");
-    background-repeat: no-repeat;
-    background-size: fit;
-    background-position: center;
-    font-family: 'Segoe UI', Roboto;
-    font-weight: bold;
-    text-align: center;
-    color: #fff;
-   
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-image: url("5727.jpg");
+  background-repeat: no-repeat;
+  background-size: fit;
+  background-position: center;
+  font-family: "Segoe UI", Roboto;
+  font-weight: bold;
+  text-align: center;
+  color: #fff;
+  height: 100vh;
 }
 .container {
-    background-color: rgba(100, 100, 100, 0.2);
-    margin: 32px;
-    padding: 16px;
-    border: 2px solid #fff;
-    border-radius: 16px;
-    backdrop-filter: blur(4px);
-    height: 100vh;
-    
+  background-color: rgba(100, 100, 100, 0.2);
+  margin: 32px;
+  padding: 24px;
+  border: 2px solid #fff;
+  border-radius: 16px;
+  backdrop-filter: blur(4px);
+  max-width: 600px;
 }
 h1 {
-    
-    margin-bottom: 10px;
-    font-size: 24px;
-    font-weight: 500;
+  margin-bottom: 10px;
+  font-size: 24px;
+  font-weight: 500;
 }
 
 h2 {
-    font-size: 50px;
-    margin-top: 0;
-  
+  font-size: 50px;
+  margin-top: 0;
 }
 
 button {
-    border: none;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    color: #000;
-    font-weight: bold;
-    min-width: 200px;
-    margin-bottom: 5px;
-    border-radius: 5px;
+  border: none;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #000;
+  font-weight: bold;
+  min-width: 200px;
+  margin-bottom: 5px;
+  border-radius: 5px;
 }
 
 #increment-btn {
-    background: #57E2E5;
+  background: #57e2e5;
 }
 
 #save-btn {
-    background: #1C7C54;
-    color: #fff;
+  background: #1c7c54;
+  color: #fff;
 }
-
